06-chaos-testing/delay-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-test
spec:
  hosts: # incoming hosts which this should be applied to this service
  - nginx-test.training.svc.cluster.local
  http:
  - route:
    - destination:
        host: nginx-test.training.svc.cluster.local
        subset: v1 
    - destination:
      host: nginx-test.training.svc.cluster.local
      subset: v2
    retries:
        attempts: 3
        perTryTimeout: 2s
# Inject delay for 50 percent
    fault:
        delay:
            fixedDelay: 7.000s
            percent: 50
